[tool.poetry]
name = "astroneer-helpers"
version = "1.0.0"
description = "Helper scripts for Astroneer"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
repository = "https://github.com/sco1/astroneer-helpers"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7"
flake8-annotations = "^1.1"
flake8-docstrings = "^1.3"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^3.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
